Refactor: Move Tests to separate project at root level for better structure

--- a/HRBackendExercise.API.Tests/HRBackendExercise.API.Tests.csproj
+++ b/HRBackendExercise.API.Tests/HRBackendExercise.API.Tests.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\HRBackendExercise.API.csproj" />
+    <ProjectReference Include="..\HRBackendExercise.API\HRBackendExercise.API.csproj" />
   </ItemGroup>
 
 </Project>
